--- a/media/xhtml_single/design/generic.css
+++ b/media/xhtml_single/design/generic.css
@@ -20,7 +20,7 @@ body {font-family: Tahoma, Helvetica, sans-serif; font-size: 14px; padding: 10px
 #wrap {margin: 0 auto; border: 5px solid #c4d69f;min-width: 760px;background: #ffffff; max-width: 1000px; }
 
 #header {position: relative; padding-top: 60px; background: #d5f19c url(header-h1-bg.gif) repeat-x; margin:3px;}
-#header h1{position: absolute; line-height: 60px; top: 0; right: 10px; color:#5e6f2c; text-shadow: #ffffff 0 0 12px; font-size: 20pt; font-weight: bold;}
+#header h1{position: absolute; line-height: 60px; top: 0; right: 10px;  color:#5e6f2c; text-shadow: #ffffff 0 0 8px; font-size: 20pt; font-weight: bold;}
 #header h2{position: absolute; line-height: 60px; top: 0; left: 0; padding-left: 10px;  text-shadow: #ffffff 1px 1px 2px;  font-size: 16pt; font-weight: normal; letter-spacing: -1px;}
 #header p {line-height: 25px; padding-left: 10px; color:#acb886; background:#f4ffd1; border-top: 3px solid #ffffff; font-size: 12px;}
 #header p a {color: #5b6a2d;}
@@ -32,10 +32,12 @@ body {font-family: Tahoma, Helvetica, sans-serif; font-size: 14px; padding: 10px
 
 #content {margin: 10px; line-height: 20px;}
 
-#content h1 {font-size: 22px;line-height: 24px; font-weight: bold; letter-spacing:-1; font-family: Arial, Helvetica, sans-serif; margin: 10px 0; border-bottom: 1px solid #c4f58a; color:#2e5727; padding-bottom: 4px;}
-#content h2 {font-size: 18px;line-height: 20px; font-weight: bold; font-family: Arial, Helvetica, sans-serif; margin: 10px 0; border-bottom: 1px solid #dddddd; color:#333333; padding-bottom: 2px;}
-#content h3 {font-size: 16px;line-height: 18px; font-weight: bold; font-family: Arial, Helvetica, sans-serif; margin: 10px 0;  color:#333333; padding-bottom: 2px;}
-#content h4 {font-size: 12px;line-height: 14px; font-weight: bold;}
+#content h1 {font-size: 24px;line-height: 26px; font-weight: bold; letter-spacing:-1px; font-family: Arial, Helvetica, sans-serif; margin: 10px 0; border-bottom: 1px solid #c4f58a; color:#2e5727; padding-bottom: 4px;}
+#content h2 {font-size: 20px;line-height: 22px; font-weight: bold; letter-spacing:-1px;font-family: Arial, Helvetica, sans-serif; margin: 10px 0; color: #333333; border-bottom: 1px solid #dddddd;  padding-bottom: 2px;}
+#content h3 {font-size: 18px;line-height: 20px; font-weight: bold; letter-spacing: -1px;font-family: Arial, Helvetica, sans-serif; margin: 10px 0;  color:#111111;  border-bottom: 1px solid #eeeeee; padding-bottom: 2px;}
+#content h4 {font-size: 16px;line-height: 18px; font-weight: bold; margin: 10px 0;font-family: Arial, Helvetica, sans-serif; color: #111111;}
+#content h5 {font-size: 14px;line-height: 16px; font-weight: bold; margin: 10px 0;font-family: Arial, Helvetica, sans-serif; color: #111111;}
+#content h6 {font-size: 12px;line-height: 14px; font-weight: bold; margin: 10px 0;font-family: Arial, Helvetica, sans-serif; color: #111111;}
 #content h1 a {border:none;}
 #content h2 a {border:none; color: #333333;}
 #content h3 a {text-decoration: underline; border:none;color: #333333;}
@@ -44,19 +46,26 @@ body {font-family: Tahoma, Helvetica, sans-serif; font-size: 14px; padding: 10px
 #content a {color: #669900;/*padding-right: 18px; background: url(jump.gif) no-repeat 100% 50%;*/}
 #content a:hover {/*color: #8d1414;*/ border-bottom: 1px solid #6faf00}
 #content hr {color: #000000;background-color: #000000;height: 1px; border: none;}
-#content dl {}
-#content dl dt {font-weight: bold; margin: 10px 0 ; position: relative; }
+#content dl {margin: 10px 0;}
+#content dl dt {font-weight: bold; font-size: 13px; margin: 5px 0 0 0; position: relative; }
+#content dl dt + dt {margin: -2px 0 0 0;}
 #content dl dt a {border: none; position: absolute;display: block; top:-2px; right: 5px; font-weight: bold;}
-#content dl dd {margin-left: 20px; padding-left: 5px;}
+#content dl dd {margin-left: 0; padding-left: 25px; background: url(jump.gif) no-repeat 5px 3px;}
 #content ul {list-style: disc; margin: 10px 0 10px 30px;}
+#content ul.toc {list-style: none; margin-left: 20px;}
 #content ol {list-style: decimal; margin: 10px 0 10px 40px; }
 #content code {padding: 1px 2px; background: #feffee}
-#content code a, #content pre a {color: #3a9900;  padding-right: 18px; background: url(jump.gif) no-repeat 100% 50%;}
-#content code a:hover, #content pre a:hover {border:none; color:#8d1414}
+/* #content code a, #content pre a {color: #3a9900;  padding-right: 18px; background: url(jump.gif) no-repeat 100% 50%;}
+#content code a:hover, #content pre a:hover {border:none; color:#8d1414}    */
 #content div.pre {}
-#content pre {overflow: auto; letter-spacing: 0;margin:10px 0; background: #f4f4f4; padding: 3px 7px; }
-#content pre code {background: none; padding: 0;}
+#content pre {overflow: auto; white-space: pre-wrap; letter-spacing: 0;margin:10px 0; background: #f4f4f4; padding: 3px 7px; }
+#content pre code {background: none !important; padding: 0;}
 #content pre.console {background: #333333; color: #ffffff;}
+
+#content a[rel="footnote"] {font-size: 12px;}
+#content div.footnotes {font-size: 12px;}
+#content div.footnotes hr {color: #69A540;background-color: #69A540;}
+#content div.footnotes li hr {color: #000000;background-color: #000000;}
 
 #content table {margin: 10px 0;width: 100%;}
 #content table thead{}
@@ -64,6 +73,31 @@ body {font-family: Tahoma, Helvetica, sans-serif; font-size: 14px; padding: 10px
 #content table td, #content table th {padding: 4px 7px; text-align: center; border: 1px solid #999999;}
 #content table td {background: #ffffff;}
 #content table th {background: #e4f7bd;  font-weight: bold; color: #657926;}
+
+#content blockquote {border: none; padding: 0 0 0 10px; margin-left: 10px; margin-right: 5px; background: transparent; border-left: 3px solid #d1f1c1; }
+
+#content blockquote.error,
+#content blockquote.help,
+#content blockquote.important,
+#content blockquote.information,
+#content blockquote.steps,
+#content blockquote.stop,
+#content blockquote.warning {margin: 10px 0 10px 0; padding: 1px 10px 1px 40px; background-repeat: no-repeat; background-position: 8px 10px;  background-color: #fffff0; border: 1px solid #eeef9f}
+#content blockquote.error code,
+#content blockquote.help code,
+#content blockquote.important code,
+#content blockquote.information code,
+#content blockquote.steps code,
+#content blockquote.stop code,
+#content blockquote.warning code {background-color: #f5f5dc;}
+
+#content blockquote.error {background-image: url(icon-error.gif)}
+#content blockquote.help {background-image: url(icon-help.gif)}
+#content blockquote.important {background-image: url(icon-important.gif)}
+#content blockquote.information {background-image: url(icon-information.gif)}
+#content blockquote.steps {background-image: url(icon-steps.gif)}
+#content blockquote.stop {background-image: url(icon-stop.gif)}
+#content blockquote.warning {background-image: url(icon-warning.gif)}
 
 #content div.method-synopsis {padding-left: 100px; text-indent: -100px; font-family: 'Courier New', Courier; font-size: 13px;}
 #content div.method-synopsis kbd {color: #ff0000;font-size: 16px; font-weight: bold;}
@@ -79,13 +113,16 @@ body {font-family: Tahoma, Helvetica, sans-serif; font-size: 14px; padding: 10px
 
 #content dl.location {position: relative;border-color:#d1f1c1; border-style: solid; border-width: 0 0 3px 0; height:50px;line-height:20px;font-weight: bold;}
 #content dl.location a {font-weight: normal;}
-#content dl.location dt {text-align: center;margin:0; padding: 5px 0;}
+#content dl.location dt {text-align: center;margin:0; padding: 5px 0; font-size: 14px;}
 #content dl.location dt a{position: static; display: inline;}
-#content dl.location dd {position: absolute; top: 0;margin:0; padding: 5px 0;}
-#content dl.location-bottom {border-top-width: 3px; border-bottom-width: 0;}
+#content dl.location dd {position: absolute; top: 0;margin:0; padding: 5px 0; background: none !important;}
+#content dl.location-bottom {border-top-width: 3px; border-bottom-width: 0; }
+#content dl.location-middle {border-top-width: 3px; border-bottom-width: 0; background-color: #E0FFBC; margin: 25px -10px 0 -10px;}
 #content dl.location dd a{}
 #content dl.location dd.prev {left:0;text-align: left;}
 #content dl.location dd.next {right:0;text-align: right;}
+#content dl.location-middle dd.prev {left: 10px;}
+#content dl.location-middle dd.next {right: 10px;}
 #content dl.location hr {display: none;background-color: #d1f1c1; height:3px; border-color:#d1f1c1; color:#d1f1c1;}
 
 /*
