[0.1] Max-width fix for IE6 [0.1] Docs license version is "1.2", not "2.1"

--- a/media/xhtml/design/ie.css
+++ b/media/xhtml/design/ie.css
@@ -22,7 +22,7 @@
 */
 /* $Id$ */
 
-#header h1 {right: 30px;}
+#wrap {width: expression(document.body.clientWidth > 1030 ? "1000px" : "auto"); zoom: 1;}
 
 #content pre {word-wrap: break-word;}
 #content blockquote {zoom:1;}
